--- a/components/header.module.css
+++ b/components/header.module.css
@@ -1,52 +1,33 @@
 /* Set min-height to avoid page reflow while session loading */
+#header{
+  margin: 0;
+padding: 0;
+width: 100% !important;
+min-width: 100%!important;
+max-width: 200px !important;
+margin: 3em 0;
+}
 .signedInStatus {
   display: block;
   min-height: 4rem;
   width: 100%;
 }
 
-.loading,
-.loaded {
-  position: relative;
-  top: 0;
-  opacity: 1;
-  overflow: hidden;
-  border-radius: 0 0 .6rem .6rem;
-  padding: .6rem 1rem;
-  margin: 0;
-  background-color: rgba(0,0,0,.05);
-  transition: all 0.2s ease-in;
-}
+
 
 .loading {
   top: -2rem;
   opacity: 0;
 }
 
-.signedInText,
-.notSignedInText {
-  position: absolute;
-  padding-top: .8rem;
-  left: 1rem;
-  right: 6.5rem;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  display: inherit;  
-  z-index: 1;
-  line-height: 1.3rem;
-}
 
-.signedInText {
-  padding-top: 0rem;
-  left: 4.6rem;
-}
+
 
 .avatar {
   border-radius: 2rem;
   float: left;
-  height: 2.8rem;
-  width: 2.8rem;
+  height: 2.3rem;
+  width: 2.3rem;
   background-color: white;
   background-size: cover;
   background-repeat: no-repeat;
@@ -82,11 +63,46 @@
 
 .navItems {
   margin-bottom: 2rem;
+  margin-top: 2rem;
   padding: 0;
   list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+
+}
+#toolbar{
+  display: flex !important;
+  background-color: #346df1 !important;
+}
+@media screen and (min-width: 769px) {
+  .navItems {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    padding: 0;
+    list-style: none;
+    width: 100%;
+    min-width: 100%;
+    padding: 0;
+    justify-content: center;
+align-items: center;
+
+  }
 }
 
 .navItem {
   display: inline-block;
-  margin-right: 1rem;
+  width: 100% !important;
+  min-width: 100% !important;
 }
+
+  .WithStyles\(ForwardRef\(Chip\)\)-root-8 {
+height: 100% !important;
+height: 50px !important;
+  }
+
