--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,7 +1,9 @@
+
+
 body {
   font-family: -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  padding: 0 1rem 1rem 1rem;
-  max-width: 680px;
+  padding: 0;
+  max-width: 320px;
   margin: 0 auto;
   background: #fff;
   color: #333;
@@ -14,10 +16,12 @@ p {
 
 a {
   font-weight: 500;
+  text-decoration: none;
+  color: #333;
 }
 
 hr {
-  border: 1px solid #ddd;
+  border: 0.1px solid#f50057;
 }
 
 iframe {
@@ -29,6 +33,41 @@ iframe {
   filter: invert(1);
 }
 
-.PrivateSwitchBase-input-18{
-  display: none;
+
+.structure{
+  display: flex;
+  justify-content: space-around;
+    align-items: flex-start;
+ 
+ 
+     flex-direction: column-reverse;
+    background:#f5005717;
+    padding: 0 1em ;
+
+}
+
+
+@media screen and (min-width: 720px) {
+  #leftsidebar {width: 200px; float: left;}
+  #main {margin-left: 216px;}
+
+body {
+  font-family: -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+
+max-width: 700px;
+ 
+  margin: 0 auto;
+  background: #fff;
+  color: #333;
+}
+.structure{
+  display: flex;
+  justify-content: space-around;
+    align-items: center;
+    min-width: 100%;
+    width: 100%;
+     flex-wrap: wrap;
+     flex-direction: row;
+}
+
 }
